# ThinX

./: .gitignore  LICENSE  README.md  thinx_guide.ipynb
goodpoints-main/: setup.py
goodpoints-main/goodpoints/: compress.py  compressc.pyx  inverse_multiquadricc.pxd  inverse_multiquadricc.pyx  maternc.pxd  maternc.pyx
package_metadata/: cc18_information.csv  ctr23_information.csv
package_metadata/openml/GesturePhaseSegmentationProcessed/custom_kt_methods/: kernel_thinning_stratified_expected_gradients_na_ann_42_10.csv
package_metadata/openml/GesturePhaseSegmentationProcessed/ground_truth/: expected_gradients_na_3_ann.npz
package_metadata/openml/GesturePhaseSegmentationProcessed/kernels_iid_comparison/: expected_gradients_na_ann_kernels_iid_42_10.csv
sage-main/sage/: utils.py
scripts/custom_kt_methods.py/: custom_kt_methods.py  runner_custom_kt_methods.py
scripts/scripts_ground_truth/: gt_shap_sage_exp-grad.py  runner_shap_sage_exp-grad.py
scripts/scripts_kernels/: kernels_iid.py  runner_kernels_iid.py
scripts/scripts_other_baselines/: other_baselines.py  runner_other_baselines.py
thinx-main/: pyproject.toml
thinx-main/tests/: conftest.py  test_data_loader.py  test_evaluation.py  test_explainer.py  test_kernel.py  test_metrics.py  test_preprocessor.py  test_pytorch_nn.py  test_smoke.py  test_tabular_preprocessor.py  test_thinx_compress.py  test_utils.py
thinx-main/thinx/: __init__.py  data_loader.py  evaluation.py  explainer.py  kernel.py  metrics.py  preprocessor.py  pytorch_nn.py  tabular_preprocessor.py  thinx_compress.py  utils.py
(+1132 files in other folders)
