[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thinx"
version = "1.0.1"
description = "A package for experimenting with different distribution compression and XAI methods"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "openml (>=0.15.1)",
    "scipy (>=1.13.0)",
    "torch (>=2.7.1)",
    "openxai @ git+https://github.com/AI4LIFE-GROUP/OpenXAI.git@a18288620464250856b55234266a6d1dabb64656",
    "xgboost (>=3.1.0)",
    "pydvl (>=0.10.0)",
    "distributed (>=2025.9.0)",
    "zarr (>=2.18.3)",
    "arfpy (>=0.1.1)", 
    "stein-thinning (>=0.2.0)",
    "shapiq (>=1.3.2)"
    # also patched versions of goodpoints and sage, located in custom_packages
    ]

[tool.setuptools.packages.find]
where = ["."]
include = ["thinx*"]
